force-app/main/default/objects/sc_lightning__SightCall_Request__c/sc_lightning__SightCall_Request__c.object-meta.xml
<CustomObject>
    <label>SightCall Request</label>
    <nameField>
        <label>SightCall Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SightCall Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>