force-app/main/default/objects/sc_lightning__SightCall_Request__c/fields/sc_lightning__payload__c.field-meta.xml
<CustomField>
    <fullName>sc_lightning__payload__c</fullName>
    <label>payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>