force-app/main/default/objects/sc_lightning__SightCall_Request__c/fields/sc_lightning__reference_object__c.field-meta.xml
<CustomField>
    <fullName>sc_lightning__reference_object__c</fullName>
    <label>reference object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>