force-app/main/default/objects/sc_lightning__SightCall_Request__c/fields/sc_lightning__Status__c.field-meta.xml
<CustomField>
    <fullName>sc_lightning__Status__c</fullName>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>