force-app/main/default/objects/sc_lightning__SightCall_Request__c/fields/sc_lightning__use_case_hash__c.field-meta.xml
<CustomField>
    <fullName>sc_lightning__use_case_hash__c</fullName>
    <label>use_case_hash</label>
    <length>80</length>
    <type>Text</type>
</CustomField>